# printweb

./: .env  Cargo.toml  Justfile
src/: main.rs  printers.rs  util.rs
src/printers/: model.rs
static/: index.html
