[package]
name = "printweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.5"
ipp = { version = "5.1.0", features = ["async"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
